[package]
name = "alloy-reth-provider"
version = "1.3.8-v2"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
homepage = "https://github.com/cakevm/alloy-reth-provider"
repository = "https://github.com/cakevm/alloy-reth-provider"
exclude = [".github/"]
description = "Implement reth StateProviderFactory traits for remote RPC usage"

[dependencies]
parking_lot = { version = "0.12.3", default-features = false }
tokio = { version = "1.43.0", default-features = false, features = ["rt-multi-thread"] }
tracing = "0.1.41"

# revm
revm = { version = "21.0.0", default-features = false, features = ["alloydb"] }
revm-context = { version = "2.0.0", default-features = false }
revm-database = { version = "2.0.0", default-features = false }
revm-state = { version = "2.0.0", default-features = false }

# alloy
alloy-consensus = { version = "0.13.0", default-features = false }
alloy-eips = { version = "0.13.0", default-features = false }
alloy-network = { version = "0.13.0", default-features = false }
alloy-primitives = { version = "0.8.25", default-features = false }
alloy-provider = { version = "0.13.0", default-features = false }
alloy-transport = { version = "0.13.0", default-features = false }

# op-alloy
op-alloy-network = { version = "0.12.0", default-features = false, optional = true }

# reth
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8", default-features = false }
reth-db-models = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8", default-features = false }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8", default-features = false }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8", default-features = false, features = [
  "serde-bincode-compat",
] }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8", default-features = false }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8", default-features = false }

# ethereum
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8", default-features = false, features = [
  "alloy-compat",
  "reth-codec",
] }

# optimism
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8", default-features = false, optional = true }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8", default-features = false, features = [
  "alloy-compat",
  "reth-codec",
  "serde",
  "serde-bincode-compat",
], optional = true }

[features]
optimism = ["op-alloy-network", "reth-optimism-chainspec", "reth-optimism-primitives"]

[dev-dependencies]
alloy-node-bindings = "0.13.0"
alloy-provider = { version = "0.13.0", default-features = false, features = ["reqwest", "reqwest-default-tls"] }
eyre = "0.6.12"
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8" }
ruint = "1.13.1"
