[package]
name = "alloy-reth-provider"
version = "1.3.13-pre"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
homepage = "https://github.com/cakevm/alloy-reth-provider"
repository = "https://github.com/cakevm/alloy-reth-provider"
exclude = [".github/"]
description = "Implement reth StateProviderFactory traits for remote RPC usage"

[dependencies]
parking_lot = { version = "0.12.3", default-features = false }
tokio = { version = "1.43.0", default-features = false, features = ["rt-multi-thread"] }
tracing = "0.1.41"

# revm
revm = { version = "22.0.1", default-features = false, features = ["alloydb"] }
revm-context = { version = "3.0.0", default-features = false }
revm-database = { version = "3.0.0", default-features = false }
revm-state = { version = "3.0.0", default-features = false }

# alloy
alloy-consensus = { version = "0.15.10", default-features = false }
alloy-eips = { version = "0.15.10", default-features = false }
alloy-network = { version = "0.15.10", default-features = false }
alloy-primitives = { version = "1.0.0", default-features = false }
alloy-provider = { version = "0.15.10", default-features = false }
alloy-transport = { version = "0.15.10", default-features = false }

# op-alloy
op-alloy-network = { version = "0.15.1", default-features = false, optional = true }

# reth
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false }
reth-db-models = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false }
reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false, features = [
  "serde-bincode-compat",
] }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false }
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false }
reth-trie = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false }

# ethereum
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false, features = [
  "reth-codec",
] }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false }

# optimism
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false, optional = true }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false, features = [
  "alloy-compat",
  "reth-codec",
  "serde",
  "serde-bincode-compat",
], optional = true }

[features]
optimism = ["op-alloy-network", "reth-optimism-chainspec", "reth-optimism-primitives"]

[dev-dependencies]
alloy-eips = { version = "0.15.10", default-features = false, features = ["kzg"] }
alloy-node-bindings = "0.15.10"
alloy-provider = { version = "0.15.10", default-features = false, features = [
  "alloy-transport-ws",
  "reqwest",
  "reqwest-default-tls",
  "ws",
] }
eyre = "0.6.12"
futures-util = "0.3.31"
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7" }
ruint = "1.14.0"
test-with = { version = "0.14.10", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
